// Vitest Snapshot v1

exports[`XCM > Acala handles downward messages 1`] = `
[
  {
    "event": {
      "data": {
        "amount": "44,764,627,185",
        "currencyId": {
          "Token": "AUSD",
        },
        "who": "23M5ttkmR6KcnvsNJdmYTpLo9xfc54g8uCk55buDfiJPon69",
      },
      "index": "0x0b0a",
      "method": "Deposited",
      "section": "tokens",
    },
    "phase": "Initialization",
    "topics": [],
  },
  {
    "event": {
      "data": {
        "amount": "2,470,967,094",
        "currencyId": {
          "Token": "AUSD",
        },
        "who": "23M5ttkmR6KcnvsNJdmYTpLo9xfc54g8uCk55buDfiJPon69",
      },
      "index": "0x0b0a",
      "method": "Deposited",
      "section": "tokens",
    },
    "phase": "Initialization",
    "topics": [],
  },
  {
    "event": {
      "data": {
        "amount": "1,218,332,188",
        "currencyId": {
          "Token": "AUSD",
        },
        "who": "23M5ttkmR6KcnvsNJdmYTpLo9xfc54g8uCk55buDfiJPon69",
      },
      "index": "0x0b0a",
      "method": "Deposited",
      "section": "tokens",
    },
    "phase": "Initialization",
    "topics": [],
  },
  {
    "event": {
      "data": {
        "amount": "7,132,835,969",
        "currencyId": {
          "Token": "AUSD",
        },
        "who": "23M5ttkmR6KcnvsNJdmYTpLo9xfc54g8uCk55buDfiJPon69",
      },
      "index": "0x0b0a",
      "method": "Deposited",
      "section": "tokens",
    },
    "phase": "Initialization",
    "topics": [],
  },
  {
    "event": {
      "data": {
        "dispatchInfo": {
          "class": "Mandatory",
          "paysFee": "Yes",
          "weight": {
            "proofSize": "0",
            "refTime": "260,558,000",
          },
        },
      },
      "index": "0x0000",
      "method": "ExtrinsicSuccess",
      "section": "system",
    },
    "phase": {
      "ApplyExtrinsic": "0",
    },
    "topics": [],
  },
  {
    "event": {
      "data": {
        "count": "1",
      },
      "index": "0x1e04",
      "method": "DownwardMessagesReceived",
      "section": "parachainSystem",
    },
    "phase": {
      "ApplyExtrinsic": "1",
    },
    "topics": [],
  },
  {
    "event": {
      "data": {
        "amount": "246,130,991,213",
        "currencyId": {
          "Token": "DOT",
        },
        "who": "25EPNyxpdqMUeVj9WndwUYVKkfFkMLroo2fg9V1MA79PJ6iE",
      },
      "index": "0x0b0a",
      "method": "Deposited",
      "section": "tokens",
    },
    "phase": {
      "ApplyExtrinsic": "1",
    },
    "topics": [],
  },
  {
    "event": {
      "data": {
        "amount": "1,733,908",
        "currencyId": {
          "Token": "DOT",
        },
        "who": "23M5ttkmR6KcoTAAE6gcmibnKFtVaTP5yxnY8HF1BmrJ2A1i",
      },
      "index": "0x0b0a",
      "method": "Deposited",
      "section": "tokens",
    },
    "phase": {
      "ApplyExtrinsic": "1",
    },
    "topics": [],
  },
  {
    "event": {
      "data": {
        "messageId": "0xa004205cd3559f06413e92aa4bd5a0f4a12eea722da2bf27c52447f69fa7b660",
        "outcome": {
          "Complete": "800,000,000",
        },
      },
      "index": "0x3502",
      "method": "ExecutedDownward",
      "section": "dmpQueue",
    },
    "phase": {
      "ApplyExtrinsic": "1",
    },
    "topics": [],
  },
  {
    "event": {
      "data": {
        "dmqHead": "0x0f36528b2a974de4271b3876f3ad8c13c9a285de54989088d8501acf3cc3057f",
        "weightUsed": {
          "proofSize": "0",
          "refTime": "800,000,000",
        },
      },
      "index": "0x1e05",
      "method": "DownwardMessagesProcessed",
      "section": "parachainSystem",
    },
    "phase": {
      "ApplyExtrinsic": "1",
    },
    "topics": [],
  },
  {
    "event": {
      "data": {
        "dispatchInfo": {
          "class": "Mandatory",
          "paysFee": "No",
          "weight": {
            "proofSize": "0",
            "refTime": "98,974,000",
          },
        },
      },
      "index": "0x0000",
      "method": "ExtrinsicSuccess",
      "section": "system",
    },
    "phase": {
      "ApplyExtrinsic": "1",
    },
    "topics": [],
  },
]
`;

exports[`XCM > Acala handles horizonal messages 1`] = `
[
  {
    "event": {
      "data": {
        "amount": "44,764,627,185",
        "currencyId": {
          "Token": "AUSD",
        },
        "who": "23M5ttkmR6KcnvsNJdmYTpLo9xfc54g8uCk55buDfiJPon69",
      },
      "index": "0x0b0a",
      "method": "Deposited",
      "section": "tokens",
    },
    "phase": "Initialization",
    "topics": [],
  },
  {
    "event": {
      "data": {
        "amount": "2,470,967,094",
        "currencyId": {
          "Token": "AUSD",
        },
        "who": "23M5ttkmR6KcnvsNJdmYTpLo9xfc54g8uCk55buDfiJPon69",
      },
      "index": "0x0b0a",
      "method": "Deposited",
      "section": "tokens",
    },
    "phase": "Initialization",
    "topics": [],
  },
  {
    "event": {
      "data": {
        "amount": "1,218,332,188",
        "currencyId": {
          "Token": "AUSD",
        },
        "who": "23M5ttkmR6KcnvsNJdmYTpLo9xfc54g8uCk55buDfiJPon69",
      },
      "index": "0x0b0a",
      "method": "Deposited",
      "section": "tokens",
    },
    "phase": "Initialization",
    "topics": [],
  },
  {
    "event": {
      "data": {
        "amount": "7,132,835,969",
        "currencyId": {
          "Token": "AUSD",
        },
        "who": "23M5ttkmR6KcnvsNJdmYTpLo9xfc54g8uCk55buDfiJPon69",
      },
      "index": "0x0b0a",
      "method": "Deposited",
      "section": "tokens",
    },
    "phase": "Initialization",
    "topics": [],
  },
  {
    "event": {
      "data": {
        "dispatchInfo": {
          "class": "Mandatory",
          "paysFee": "Yes",
          "weight": {
            "proofSize": "0",
            "refTime": "260,558,000",
          },
        },
      },
      "index": "0x0000",
      "method": "ExtrinsicSuccess",
      "section": "system",
    },
    "phase": {
      "ApplyExtrinsic": "0",
    },
    "topics": [],
  },
  {
    "event": {
      "data": {
        "amount": "9,111,469,011,754,434",
        "currencyId": {
          "Token": "AUSD",
        },
        "who": "23UvQ3ZQXJ5LfTUSYkcRPkQX2FHgcKxGmqdxYJe9j5e3Lwsi",
      },
      "index": "0x0b08",
      "method": "Withdrawn",
      "section": "tokens",
    },
    "phase": {
      "ApplyExtrinsic": "1",
    },
    "topics": [],
  },
  {
    "event": {
      "data": {
        "amount": "9,111,467,428,844,037",
        "currencyId": {
          "Token": "AUSD",
        },
        "who": "2561WgnRM2Nbec2WseHxVdpeW19YYHh7RM5gRWQV7zwwwgXQ",
      },
      "index": "0x0b00",
      "method": "Endowed",
      "section": "tokens",
    },
    "phase": {
      "ApplyExtrinsic": "1",
    },
    "topics": [],
  },
  {
    "event": {
      "data": {
        "amount": "9,111,467,428,844,037",
        "currencyId": {
          "Token": "AUSD",
        },
        "who": "2561WgnRM2Nbec2WseHxVdpeW19YYHh7RM5gRWQV7zwwwgXQ",
      },
      "index": "0x0b0a",
      "method": "Deposited",
      "section": "tokens",
    },
    "phase": {
      "ApplyExtrinsic": "1",
    },
    "topics": [],
  },
  {
    "event": {
      "data": {
        "amount": "1,582,910,397",
        "currencyId": {
          "Token": "AUSD",
        },
        "who": "23M5ttkmR6KcoTAAE6gcmibnKFtVaTP5yxnY8HF1BmrJ2A1i",
      },
      "index": "0x0b0a",
      "method": "Deposited",
      "section": "tokens",
    },
    "phase": {
      "ApplyExtrinsic": "1",
    },
    "topics": [],
  },
  {
    "event": {
      "data": {
        "messageHash": "0x09e1b5b4cd5b9ab2cb31449175dc5504e4314db308d38de8dfd8d6529e481b79",
        "weight": {
          "proofSize": "0",
          "refTime": "800,000,000",
        },
      },
      "index": "0x3200",
      "method": "Success",
      "section": "xcmpQueue",
    },
    "phase": {
      "ApplyExtrinsic": "1",
    },
    "topics": [],
  },
  {
    "event": {
      "data": {
        "dispatchInfo": {
          "class": "Mandatory",
          "paysFee": "No",
          "weight": {
            "proofSize": "0",
            "refTime": "98,974,000",
          },
        },
      },
      "index": "0x0000",
      "method": "ExtrinsicSuccess",
      "section": "system",
    },
    "phase": {
      "ApplyExtrinsic": "1",
    },
    "topics": [],
  },
]
`;

exports[`XCM > Acala send upward messages to Polkadot 1`] = `
{
  "consumers": "0",
  "data": {
    "feeFrozen": "0",
    "free": "0",
    "miscFrozen": "0",
    "reserved": "0",
  },
  "nonce": "0",
  "providers": "0",
  "sufficients": "0",
}
`;

exports[`XCM > Acala send upward messages to Polkadot 2`] = `
{
  "consumers": "0",
  "data": {
    "feeFrozen": "0",
    "free": "10,000,000,000,000",
    "miscFrozen": "0",
    "reserved": "0",
  },
  "nonce": "0",
  "providers": "0",
  "sufficients": "0",
}
`;

exports[`XCM > Acala send upward messages to Polkadot 3`] = `
{
  "free": "10,000,000,000,000",
  "frozen": "0",
  "reserved": "0",
}
`;

exports[`XCM > Acala send upward messages to Polkadot 4`] = `
{
  "free": "9,900,000,000,000",
  "frozen": "0",
  "reserved": "0",
}
`;

exports[`XCM > Acala send upward messages to Polkadot 5`] = `
{
  "consumers": "0",
  "data": {
    "feeFrozen": "0",
    "free": "99,530,582,548",
    "miscFrozen": "0",
    "reserved": "0",
  },
  "nonce": "0",
  "providers": "1",
  "sufficients": "0",
}
`;

exports[`XCM > Acala send upward messages to Polkadot 6`] = `
[
  {
    "event": {
      "data": {
        "dispatchInfo": {
          "class": "Mandatory",
          "paysFee": "Yes",
          "weight": "218,918,000",
        },
      },
      "index": "0x0000",
      "method": "ExtrinsicSuccess",
      "section": "system",
    },
    "phase": {
      "ApplyExtrinsic": "0",
    },
    "topics": [],
  },
  {
    "event": {
      "data": {
        "amount": "100,000,000,000",
        "who": "13YMK2eYoAvStnzReuxBjMrAvPXmmdsURwZvc62PrdXimbNy",
      },
      "index": "0x0508",
      "method": "Withdraw",
      "section": "balances",
    },
    "phase": {
      "ApplyExtrinsic": "1",
    },
    "topics": [],
  },
  {
    "event": {
      "data": {
        "amount": "99,530,582,548",
        "who": "146SvjUZXoMaemdeiecyxgALeYMm8ZWh1yrGo8RtpoPfe7WL",
      },
      "index": "0x0507",
      "method": "Deposit",
      "section": "balances",
    },
    "phase": {
      "ApplyExtrinsic": "1",
    },
    "topics": [],
  },
  {
    "event": {
      "data": {
        "account": "146SvjUZXoMaemdeiecyxgALeYMm8ZWh1yrGo8RtpoPfe7WL",
      },
      "index": "0x0003",
      "method": "NewAccount",
      "section": "system",
    },
    "phase": {
      "ApplyExtrinsic": "1",
    },
    "topics": [],
  },
  {
    "event": {
      "data": {
        "account": "146SvjUZXoMaemdeiecyxgALeYMm8ZWh1yrGo8RtpoPfe7WL",
        "freeBalance": "99,530,582,548",
      },
      "index": "0x0500",
      "method": "Endowed",
      "section": "balances",
    },
    "phase": {
      "ApplyExtrinsic": "1",
    },
    "topics": [],
  },
  {
    "event": {
      "data": {
        "amount": "469,417,452",
        "who": "12HFymxpDmi4XXPHaEMp74CNpRhkqwG5qxnrgikkhon1XMrj",
      },
      "index": "0x0507",
      "method": "Deposit",
      "section": "balances",
    },
    "phase": {
      "ApplyExtrinsic": "1",
    },
    "topics": [],
  },
  {
    "event": {
      "data": [
        "0x7e0d49829a0e0825d8416c48f7c444bc7540dbc1909a187701eff4b67a4c64c4",
        {
          "Complete": "4,000,000,000",
        },
      ],
      "index": "0x3b02",
      "method": "ExecutedUpward",
      "section": "ump",
    },
    "phase": {
      "ApplyExtrinsic": "1",
    },
    "topics": [],
  },
  {
    "event": {
      "data": {
        "dispatchInfo": {
          "class": "Mandatory",
          "paysFee": "Yes",
          "weight": "85,212,000",
        },
      },
      "index": "0x0000",
      "method": "ExtrinsicSuccess",
      "section": "system",
    },
    "phase": {
      "ApplyExtrinsic": "1",
    },
    "topics": [],
  },
]
`;

exports[`XCM > Acala send upward messages to Polkadot 7`] = `
[
  {
    "event": {
      "data": {
        "amount": "44,764,627,185",
        "currencyId": {
          "Token": "AUSD",
        },
        "who": "23M5ttkmR6KcnvsNJdmYTpLo9xfc54g8uCk55buDfiJPon69",
      },
      "index": "0x0b0a",
      "method": "Deposited",
      "section": "tokens",
    },
    "phase": "Initialization",
    "topics": [],
  },
  {
    "event": {
      "data": {
        "amount": "2,470,967,094",
        "currencyId": {
          "Token": "AUSD",
        },
        "who": "23M5ttkmR6KcnvsNJdmYTpLo9xfc54g8uCk55buDfiJPon69",
      },
      "index": "0x0b0a",
      "method": "Deposited",
      "section": "tokens",
    },
    "phase": "Initialization",
    "topics": [],
  },
  {
    "event": {
      "data": {
        "amount": "1,218,332,188",
        "currencyId": {
          "Token": "AUSD",
        },
        "who": "23M5ttkmR6KcnvsNJdmYTpLo9xfc54g8uCk55buDfiJPon69",
      },
      "index": "0x0b0a",
      "method": "Deposited",
      "section": "tokens",
    },
    "phase": "Initialization",
    "topics": [],
  },
  {
    "event": {
      "data": {
        "amount": "7,132,835,969",
        "currencyId": {
          "Token": "AUSD",
        },
        "who": "23M5ttkmR6KcnvsNJdmYTpLo9xfc54g8uCk55buDfiJPon69",
      },
      "index": "0x0b0a",
      "method": "Deposited",
      "section": "tokens",
    },
    "phase": "Initialization",
    "topics": [],
  },
  {
    "event": {
      "data": {
        "dispatchInfo": {
          "class": "Mandatory",
          "paysFee": "Yes",
          "weight": {
            "proofSize": "0",
            "refTime": "260,558,000",
          },
        },
      },
      "index": "0x0000",
      "method": "ExtrinsicSuccess",
      "section": "system",
    },
    "phase": {
      "ApplyExtrinsic": "0",
    },
    "topics": [],
  },
  {
    "event": {
      "data": {
        "dispatchInfo": {
          "class": "Mandatory",
          "paysFee": "No",
          "weight": {
            "proofSize": "0",
            "refTime": "98,974,000",
          },
        },
      },
      "index": "0x0000",
      "method": "ExtrinsicSuccess",
      "section": "system",
    },
    "phase": {
      "ApplyExtrinsic": "1",
    },
    "topics": [],
  },
  {
    "event": {
      "data": {
        "amount": "2,630,005,051",
        "who": "23y3WetbNi6rDMgHmyRDjgpb7PnhgPotuPPawxruTMLYTLzG",
      },
      "index": "0x0a08",
      "method": "Withdraw",
      "section": "balances",
    },
    "phase": {
      "ApplyExtrinsic": "2",
    },
    "topics": [],
  },
  {
    "event": {
      "data": {
        "amount": "100,000,000,000",
        "currencyId": {
          "Token": "DOT",
        },
        "who": "23y3WetbNi6rDMgHmyRDjgpb7PnhgPotuPPawxruTMLYTLzG",
      },
      "index": "0x0b08",
      "method": "Withdrawn",
      "section": "tokens",
    },
    "phase": {
      "ApplyExtrinsic": "2",
    },
    "topics": [],
  },
  {
    "event": {
      "data": {
        "assets": [
          {
            "fun": {
              "Fungible": "100,000,000,000",
            },
            "id": {
              "Concrete": {
                "interior": "Here",
                "parents": "1",
              },
            },
          },
        ],
        "dest": {
          "interior": {
            "X1": {
              "AccountId32": {
                "id": "0x88dc3417d5058ec4b4503e0c12ea1a0a89be200fe98922423d4334014fa6b0ee",
                "network": "Any",
              },
            },
          },
          "parents": "1",
        },
        "fee": {
          "fun": {
            "Fungible": "100,000,000,000",
          },
          "id": {
            "Concrete": {
              "interior": "Here",
              "parents": "1",
            },
          },
        },
        "sender": "23y3WetbNi6rDMgHmyRDjgpb7PnhgPotuPPawxruTMLYTLzG",
      },
      "index": "0x3600",
      "method": "TransferredMultiAssets",
      "section": "xTokens",
    },
    "phase": {
      "ApplyExtrinsic": "2",
    },
    "topics": [],
  },
  {
    "event": {
      "data": {
        "amount": "2,630,005,051",
        "who": "23M5ttkmR6KcoTAAE6gcmibnKFtVaTP5yxnY8HF1BmrJ2A1i",
      },
      "index": "0x0a07",
      "method": "Deposit",
      "section": "balances",
    },
    "phase": {
      "ApplyExtrinsic": "2",
    },
    "topics": [],
  },
  {
    "event": {
      "data": {
        "value": "2,630,005,051",
      },
      "index": "0x1406",
      "method": "Deposit",
      "section": "treasury",
    },
    "phase": {
      "ApplyExtrinsic": "2",
    },
    "topics": [],
  },
  {
    "event": {
      "data": {
        "actualFee": "2,630,005,051",
        "actualSurplus": "0",
        "actualTip": "0",
        "who": "23y3WetbNi6rDMgHmyRDjgpb7PnhgPotuPPawxruTMLYTLzG",
      },
      "index": "0x0e03",
      "method": "TransactionFeePaid",
      "section": "transactionPayment",
    },
    "phase": {
      "ApplyExtrinsic": "2",
    },
    "topics": [],
  },
  {
    "event": {
      "data": {
        "dispatchInfo": {
          "class": "Normal",
          "paysFee": "Yes",
          "weight": {
            "proofSize": "0",
            "refTime": "598,974,000",
          },
        },
      },
      "index": "0x0000",
      "method": "ExtrinsicSuccess",
      "section": "system",
    },
    "phase": {
      "ApplyExtrinsic": "2",
    },
    "topics": [],
  },
]
`;

exports[`XCM > Polkadot send downward messages to Acala 1`] = `
[
  {
    "event": {
      "data": {
        "dispatchInfo": {
          "class": "Mandatory",
          "paysFee": "Yes",
          "weight": "218,918,000",
        },
      },
      "index": "0x0000",
      "method": "ExtrinsicSuccess",
      "section": "system",
    },
    "phase": {
      "ApplyExtrinsic": "0",
    },
    "topics": [],
  },
  {
    "event": {
      "data": {
        "dispatchInfo": {
          "class": "Mandatory",
          "paysFee": "Yes",
          "weight": "85,212,000",
        },
      },
      "index": "0x0000",
      "method": "ExtrinsicSuccess",
      "section": "system",
    },
    "phase": {
      "ApplyExtrinsic": "1",
    },
    "topics": [],
  },
  {
    "event": {
      "data": {
        "amount": "184,908,979",
        "who": "146SvjUZXoMaemdeiecyxgALeYMm8ZWh1yrGo8RtpoPfe7WL",
      },
      "index": "0x0508",
      "method": "Withdraw",
      "section": "balances",
    },
    "phase": {
      "ApplyExtrinsic": "2",
    },
    "topics": [],
  },
  {
    "event": {
      "data": {
        "amount": "1,000,000,000,000",
        "from": "146SvjUZXoMaemdeiecyxgALeYMm8ZWh1yrGo8RtpoPfe7WL",
        "to": "13YMK2eYoAvStnzReuxBjMrAvPXmmdsURwZvc62PrdXimbNy",
      },
      "index": "0x0502",
      "method": "Transfer",
      "section": "balances",
    },
    "phase": {
      "ApplyExtrinsic": "2",
    },
    "topics": [],
  },
  {
    "event": {
      "data": [
        {
          "Complete": "1,000,000,000",
        },
      ],
      "index": "0x6300",
      "method": "Attempted",
      "section": "xcmPallet",
    },
    "phase": {
      "ApplyExtrinsic": "2",
    },
    "topics": [],
  },
  {
    "event": {
      "data": {
        "amount": "147,927,183",
        "who": "13UVJyLnbVp9RBZYFwFGyDvVd1y27Tt8tkntv6Q7JVPhFsTB",
      },
      "index": "0x0507",
      "method": "Deposit",
      "section": "balances",
    },
    "phase": {
      "ApplyExtrinsic": "2",
    },
    "topics": [],
  },
  {
    "event": {
      "data": {
        "value": "147,927,183",
      },
      "index": "0x1306",
      "method": "Deposit",
      "section": "treasury",
    },
    "phase": {
      "ApplyExtrinsic": "2",
    },
    "topics": [],
  },
  {
    "event": {
      "data": {
        "amount": "36,981,796",
        "who": "12HFymxpDmi4XXPHaEMp74CNpRhkqwG5qxnrgikkhon1XMrj",
      },
      "index": "0x0507",
      "method": "Deposit",
      "section": "balances",
    },
    "phase": {
      "ApplyExtrinsic": "2",
    },
    "topics": [],
  },
  {
    "event": {
      "data": {
        "actualFee": "184,908,979",
        "tip": "0",
        "who": "146SvjUZXoMaemdeiecyxgALeYMm8ZWh1yrGo8RtpoPfe7WL",
      },
      "index": "0x2000",
      "method": "TransactionFeePaid",
      "section": "transactionPayment",
    },
    "phase": {
      "ApplyExtrinsic": "2",
    },
    "topics": [],
  },
  {
    "event": {
      "data": {
        "dispatchInfo": {
          "class": "Normal",
          "paysFee": "Yes",
          "weight": "1,185,212,000",
        },
      },
      "index": "0x0000",
      "method": "ExtrinsicSuccess",
      "section": "system",
    },
    "phase": {
      "ApplyExtrinsic": "2",
    },
    "topics": [],
  },
]
`;

exports[`XCM > Polkadot send downward messages to Acala 2`] = `
[
  {
    "event": {
      "data": {
        "amount": "44,764,627,185",
        "currencyId": {
          "Token": "AUSD",
        },
        "who": "23M5ttkmR6KcnvsNJdmYTpLo9xfc54g8uCk55buDfiJPon69",
      },
      "index": "0x0b0a",
      "method": "Deposited",
      "section": "tokens",
    },
    "phase": "Initialization",
    "topics": [],
  },
  {
    "event": {
      "data": {
        "amount": "2,470,967,094",
        "currencyId": {
          "Token": "AUSD",
        },
        "who": "23M5ttkmR6KcnvsNJdmYTpLo9xfc54g8uCk55buDfiJPon69",
      },
      "index": "0x0b0a",
      "method": "Deposited",
      "section": "tokens",
    },
    "phase": "Initialization",
    "topics": [],
  },
  {
    "event": {
      "data": {
        "amount": "1,218,332,188",
        "currencyId": {
          "Token": "AUSD",
        },
        "who": "23M5ttkmR6KcnvsNJdmYTpLo9xfc54g8uCk55buDfiJPon69",
      },
      "index": "0x0b0a",
      "method": "Deposited",
      "section": "tokens",
    },
    "phase": "Initialization",
    "topics": [],
  },
  {
    "event": {
      "data": {
        "amount": "7,132,835,969",
        "currencyId": {
          "Token": "AUSD",
        },
        "who": "23M5ttkmR6KcnvsNJdmYTpLo9xfc54g8uCk55buDfiJPon69",
      },
      "index": "0x0b0a",
      "method": "Deposited",
      "section": "tokens",
    },
    "phase": "Initialization",
    "topics": [],
  },
  {
    "event": {
      "data": {
        "dispatchInfo": {
          "class": "Mandatory",
          "paysFee": "Yes",
          "weight": {
            "proofSize": "0",
            "refTime": "260,558,000",
          },
        },
      },
      "index": "0x0000",
      "method": "ExtrinsicSuccess",
      "section": "system",
    },
    "phase": {
      "ApplyExtrinsic": "0",
    },
    "topics": [],
  },
  {
    "event": {
      "data": {
        "count": "2",
      },
      "index": "0x1e04",
      "method": "DownwardMessagesReceived",
      "section": "parachainSystem",
    },
    "phase": {
      "ApplyExtrinsic": "1",
    },
    "topics": [],
  },
  {
    "event": {
      "data": {
        "amount": "235,976,375,317",
        "currencyId": {
          "Token": "DOT",
        },
        "who": "23e3iqWXzeCN5H3aJzDmqk2bz1mZ9pRG94PM1NJdfBaMj6ZR",
      },
      "index": "0x0b00",
      "method": "Endowed",
      "section": "tokens",
    },
    "phase": {
      "ApplyExtrinsic": "1",
    },
    "topics": [],
  },
  {
    "event": {
      "data": {
        "amount": "235,976,375,317",
        "currencyId": {
          "Token": "DOT",
        },
        "who": "23e3iqWXzeCN5H3aJzDmqk2bz1mZ9pRG94PM1NJdfBaMj6ZR",
      },
      "index": "0x0b0a",
      "method": "Deposited",
      "section": "tokens",
    },
    "phase": {
      "ApplyExtrinsic": "1",
    },
    "topics": [],
  },
  {
    "event": {
      "data": {
        "amount": "1,733,908",
        "currencyId": {
          "Token": "DOT",
        },
        "who": "23M5ttkmR6KcoTAAE6gcmibnKFtVaTP5yxnY8HF1BmrJ2A1i",
      },
      "index": "0x0b0a",
      "method": "Deposited",
      "section": "tokens",
    },
    "phase": {
      "ApplyExtrinsic": "1",
    },
    "topics": [],
  },
  {
    "event": {
      "data": {
        "messageId": "0x8088b1e1a4d66511b52e8a8f6155e42241ea1818151625a924852c814d9aa265",
        "outcome": {
          "Complete": "800,000,000",
        },
      },
      "index": "0x3502",
      "method": "ExecutedDownward",
      "section": "dmpQueue",
    },
    "phase": {
      "ApplyExtrinsic": "1",
    },
    "topics": [],
  },
  {
    "event": {
      "data": {
        "account": "23y3WetbNi6rDMgHmyRDjgpb7PnhgPotuPPawxruTMLYTLzG",
      },
      "index": "0x0003",
      "method": "NewAccount",
      "section": "system",
    },
    "phase": {
      "ApplyExtrinsic": "1",
    },
    "topics": [],
  },
  {
    "event": {
      "data": {
        "amount": "999,998,266,092",
        "currencyId": {
          "Token": "DOT",
        },
        "who": "23y3WetbNi6rDMgHmyRDjgpb7PnhgPotuPPawxruTMLYTLzG",
      },
      "index": "0x0b00",
      "method": "Endowed",
      "section": "tokens",
    },
    "phase": {
      "ApplyExtrinsic": "1",
    },
    "topics": [],
  },
  {
    "event": {
      "data": {
        "amount": "999,998,266,092",
        "currencyId": {
          "Token": "DOT",
        },
        "who": "23y3WetbNi6rDMgHmyRDjgpb7PnhgPotuPPawxruTMLYTLzG",
      },
      "index": "0x0b0a",
      "method": "Deposited",
      "section": "tokens",
    },
    "phase": {
      "ApplyExtrinsic": "1",
    },
    "topics": [],
  },
  {
    "event": {
      "data": {
        "amount": "1,733,908",
        "currencyId": {
          "Token": "DOT",
        },
        "who": "23M5ttkmR6KcoTAAE6gcmibnKFtVaTP5yxnY8HF1BmrJ2A1i",
      },
      "index": "0x0b0a",
      "method": "Deposited",
      "section": "tokens",
    },
    "phase": {
      "ApplyExtrinsic": "1",
    },
    "topics": [],
  },
  {
    "event": {
      "data": {
        "messageId": "0xc4dd612e0a23c9e0d3c677adbfb3bca299caa4c37c2085baa5d7a33736d19e80",
        "outcome": {
          "Complete": "800,000,000",
        },
      },
      "index": "0x3502",
      "method": "ExecutedDownward",
      "section": "dmpQueue",
    },
    "phase": {
      "ApplyExtrinsic": "1",
    },
    "topics": [],
  },
  {
    "event": {
      "data": {
        "dmqHead": "0x96402b7105910de468750e7efe65ddc907e63f49c2ffabb96c6fe339c5cb3bb6",
        "weightUsed": {
          "proofSize": "0",
          "refTime": "1,600,000,000",
        },
      },
      "index": "0x1e05",
      "method": "DownwardMessagesProcessed",
      "section": "parachainSystem",
    },
    "phase": {
      "ApplyExtrinsic": "1",
    },
    "topics": [],
  },
  {
    "event": {
      "data": {
        "dispatchInfo": {
          "class": "Mandatory",
          "paysFee": "No",
          "weight": {
            "proofSize": "0",
            "refTime": "98,974,000",
          },
        },
      },
      "index": "0x0000",
      "method": "ExtrinsicSuccess",
      "section": "system",
    },
    "phase": {
      "ApplyExtrinsic": "1",
    },
    "topics": [],
  },
]
`;
